# GLiNER2

./: .gitignore  CLAUDE.md  METRICS.md  README.md  RUNNING.md  TRAINING.md  TRAINING_DATA.md  pyproject.toml
gliner2/: __init__.py  api_client.py  layers.py  model.py  processor.py
gliner2/inference/: chunking.py  engine.py  schema.py  schema_model.py
gliner2/training/: __init__.py  chunking.py  data.py  eta.py  metrics.py  parallel.py  trainer.py
tests/: test_ace2005_mention_filter.py  test_api_events_schema.py  test_backwards_compat.py  test_checkpoint_restart.py  test_convert_docred.py  test_convert_klue.py  test_convert_leven.py  test_convert_paraloq_json.py  test_convert_scierc_biored.py  test_convert_token_ner.py  test_data_parallel.py  test_eval_language.py  test_event_extraction.py  test_label_transform.py  test_mention_filter.py  test_metrics_files.py  test_metrics_report.py  test_mmbert_integration.py  test_model_card.py  test_relation_extraction.py  test_relaxed_metrics.py  test_struct_loss_variants.py  test_torch_free_import.py  test_train_configs.py
tools/data/: README.md  TRAINING_DATA.md  _mention_filter.py  _split.py  _stratify.py  convert_ace2005.py  convert_bio_ner_relations.py  convert_biomed_ner.py  convert_biored.py  convert_casie.py  convert_cmnee.py  convert_docee.py  convert_docred.py  convert_events_biotech.py  convert_finer_ord.py  convert_gliclass_logic.py  convert_gliner_multilingual.py  convert_hf_token_ner.py  convert_klue.py  convert_knowledgator_gliner.py  convert_leven.py  convert_maven.py  convert_nuner.py  convert_paraloq_json.py  convert_pile_ner_definition.py  convert_pubmed_abstracts_ner.py  convert_rams.py  convert_redocred.py  convert_scientific_text.py  convert_scierc.py  convert_sentence_rex.py  convert_stockmark_ner.py  convert_text2json.py  convert_wikievents.py  run_all_converters.sh
tools/data/config/: mention_filter.yaml
tools/train/: EVALUATION.md  EVALUATION_PLAN.md  EVENT_LOSS_PLAN.md  RECOMMENDATIONS.md  TRAINING.md  dataset_registry.yaml  model_card.py  push_to_hub.py  train.py  train_mmbert_base.py  train_mmbert_small.py  train_mmbert_small_bce.py  train_mmbert_small_bce_posweight.py  train_mmbert_small_focal.py
tools/train/config/: gliner2-large-v1-docred.yaml  gliner2-large-v1-wikievents.yaml  gliner2-multi-wikievents.yaml  mmbert-base.yaml  mmbert-small.yaml  (+6 more)
tutorial/: 12-events.md  12-long_context.md  4-combined.md  7-api.md  8-train_data.md  9-training.md
