[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gliner2", "gliner2.*"]

[tool.setuptools.package-data]
gliner2 = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "gliner2.__version__"}

[project]
name = "gliner2"
description = "GLiNER2: Unified Schema-Based Information Extraction and Text Classification"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

maintainers = [
    {name = "Urchade Zaratiana"},
]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "datasets>=3.1.0",
    "gliner",
    "peft",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.28",
    "urllib3>=1.26",
]

dynamic = ["version"]

[project.optional-dependencies]
local = [
    "torch",
    "transformers",
    "peft",
]

[project.urls]
Homepage = "https://github.com/fastino-ai/GLiNER2"
Repository = "https://github.com/fastino-ai/GLiNER2"

[dependency-groups]
dev = [
    "datasets>=2.14",
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]

[tool.pytest.ini_options]
markers = [
    "slow: tests that download models or are otherwise too slow for default runs",
]
